--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,6 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
-<distributionManagement>
-   <repository>
-     <id>github</id>
-     <name>GitHub AutumnSpark1226 Apache Maven Packages</name>
-     <url>https://maven.pkg.github.com/AutumnSpark1226/FJSCAPI</url>
-   </repository>
-</distributionManagement>
-
+    </build>>
 
 </project>
