--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId></groupId>
+    <groupId>AutumnSpark1226</groupId>
     <artifactId>FJSCAPI</artifactId>
     <version>2021.07.06</version>
     <properties>
@@ -28,7 +28,7 @@
         <repository>
             <id>github</id>
             <name>GitHub AutumnSpark1226 Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/AutumnSpark1226/FJSCAPI</url>
+            <url>https://maven.pkg.github.com</url>
         </repository>
     </distributionManagement>
 </project>
